
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "example",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bazeltest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello",
    srcs = ["hello.c"],
    linkopts = [
        "-static",
    ],
)
